--- a/src/app/shared/text-input/text-input.component.html
+++ b/src/app/shared/text-input/text-input.component.html
@@ -1,7 +1,11 @@
+ <div>
+    <div><mat-label>{{ label }}</mat-label>
+        </div>
 <mat-form-field appearance="outline">
-  <mat-label>{{ label }}</mat-label>
+ 
   <input
-    [type]="type"
+   
+     [type]="hide ? type : 'text'" 
     class="form-control"
     [placeholder]="placeholder"
     [id]="id"
@@ -10,4 +14,14 @@
     [formControl]="control"
     matInput
   />
+    <button *ngIf="type=='password'" mat-icon-button 
+          matSuffix 
+          (click)="hide = !hide" 
+          [attr.aria-label]="'Toggle password visibility'" 
+          [attr.aria-pressed]="!hide" 
+          type="button">
+    <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+  </button>
+   <mat-error *ngIf="showError">{{errorMessage}}</mat-error>
 </mat-form-field>
+</div>
