--- a/src/app/shared/form/form.component.html
+++ b/src/app/shared/form/form.component.html
@@ -1,3 +1,3 @@
-<form [formGroup]="form" (ngSubmit)="submit()" >
+<form [formGroup]="form" (ngSubmit)="onSubmit()" >
       <ng-content></ng-content>
 </form>
