--- a/src/app/features/auth/auth.component.html
+++ b/src/app/features/auth/auth.component.html
@@ -6,6 +6,6 @@
 
 <app-text-input  [control]="form.get('email')"   label="Email"  name="email" id="email" type="email" placeholder="Enter your Name" [required]="true"></app-text-input>
 <app-text-input   [control]="form.get('password')" label="Password" name="password" id="password" type="password" placeholder="**********"  [required]="true"></app-text-input>
-<app-button type="submit" label="submit"></app-button>
+<app-button type="submit" label="Login"></app-button>
 </app-form>
 </div>
