--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,26 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: #2196f3 !important; // blue
   color: white;
 }
+
+
+.form-container { 
+
+
+    max-width:70%;
+    margin-inline:auto;
+}
+.title {
+    text-align: center;
+}
+.primary {
+    color:#2962ff
+}
+
+
+@media screen and (max-width:768px) {
+    .form-container { 
+
+
+    max-width:90%;
+}
+}
