--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,1 +1,11 @@
-<p>dashboard works!</p>
+<div>
+ <div class="profile_card">
+   <div class="balance_card">
+
+   </div>
+   <div>
+    <div class="titl">Recent Expenses</div>
+    <div></div>
+   </div>
+ </div>
+</div>
