--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn" [type]="type" >{{ label }}</button>
+<button [disabled]="disabled" class="btn" [type]="type" >{{ label }}</button>
