--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,10 @@ $color-background-main: #f6f9ff;
 $color-input-background: #f2f2f2;
 
 @import url(assets/styles/angular-material.scss);
-html, body { height: 100%; }
+html, body {
+  
+  
+  height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .toast-success {
@@ -24,7 +27,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .form-container { 
 
 
-    max-width:70%;
+    max-width:50%;
     margin-inline:auto;
 }
 .title {
