--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color:#2962ff
 }
 
+.item {
+     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  padding: 12px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background-color: white;
+}
+.content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    h3,h6,h5,h4 {
+      margin:0 auto;
+      font-weight: normal;
+    }
+}
 
 @media screen and (max-width:768px) {
     .form-container { 
