--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -4,9 +4,11 @@
   border-bottom-right-radius: 10px ;
   border-bottom-left-radius: 10px ;
   position: relative;
+  background-image:url('../../../assets/images/background.jpg');
+    background-size: 100%;
 }
 .balance_card {
-    width: 75%;
+    width: 80%;
     background-color: #4A7DFF ;
     position: relative;
     top: 20px;
@@ -14,6 +16,8 @@
     border-radius: 15px;
     color: white;
     padding: 30px 20px;
+     background-image:url('../../../assets/images/2nd_background.jpg');
+    background-size: 100%;
 }
 .heading {
   display: flex;
@@ -22,7 +26,7 @@ h4,h5{  font-weight: 500 ;
   margin: 0;
 }}
 .container {
-  max-width: 75%;
+  max-width: 80%;
   margin-top: 70px;
    margin: 35px auto 0;
 }
