add absolute path in backgrounds

--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@
   border-bottom-right-radius: 10px ;
   border-bottom-left-radius: 10px ;
   position: relative;
-  background-image:url('../../../assets/images/background.jpg');
+  background-image:url('/assets/images/background.jpg');
     background-size: 100%;
 }
 .balance_card {
@@ -16,7 +16,7 @@
     border-radius: 15px;
     color: white;
     padding: 30px 20px;
-     background-image:url('../../../assets/images/2nd_background.jpg');
+     background-image:url('/assets/images/2nd_background.jpg');
     background-size: 100%;
 }
 .heading {
